// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PreviewCard > renders automatic variant matching snapshot 1`] = `
<div
  style="background: var(--color-background-body); border: 1px solid; border-radius: 6px; padding: 10px 12px; box-shadow: var(--shadow-sm); display: flex; flex-direction: column; border-width: var(--color-border); border-style: var(--color-border); border-color: var(--color-border);"
>
  <div
    style="font-size: 13px; line-height: 1.35; font-weight: 500; margin-bottom: 8px;"
  >
    Cache layer for /tasks API
  </div>
  <div
    data-role="preview-body"
    style="display: flex; flex-direction: column;"
  >
    <div
      style="display: flex; align-items: center; gap: 6px; padding: 6px 8px; background: var(--color-background-card); border-radius: 4px; border: 1px solid; font-size: 11.5px; border-width: var(--color-border); border-style: var(--color-border); border-color: var(--color-border);"
    >
      <span
        aria-hidden="true"
        style="width: 11px; height: 11px; border-radius: 3px; flex-shrink: 0; background: #2b579a;"
      />
      <span
        style="min-width: 0; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-weight: 500; flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
      >
        Architecture review notes
      </span>
      <span
        class="font-mono tabular-nums text-xs text-secondary"
      >
        docs.acme
      </span>
    </div>
    <div
      class="text-xs text-secondary"
      style="margin-top: 5px; font-style: italic;"
    >
      picked from 
      references
    </div>
  </div>
  <div
    style="display: flex; align-items: center; justify-content: space-between; margin-top: 10px; padding-top: 8px; border-top-width: var(--color-border); border-top-style: var(--color-border); border-top-color: var(--color-border);"
  >
    <div
      style="display: flex; align-items: center; gap: 6px;"
    >
      <span
        aria-label="Urgent priority"
        class="astryx-statusdot neutral x1rg5ohu x16rqkct x2lah0s x1xc55vz xdk7pt x1q5y3ey"
        data-variant="neutral"
        role="img"
        style="background-color: var(--color-icon-red);"
      />
      <span
        class="astryx-badge neutral x3nfvp2 x6s0dn4 xl56j7k xzye2dw x1grt7ep xt970qd xf314gf xjspbzw xjb2p0i x141an7d x1ltkj2j x1e4wzip xuxw1ft x17x4s8c x1tgivj0"
        data-label-color="var(--color-accent)"
        data-variant="neutral"
      >
        api
      </span>
      <span
        class="text-xs text-secondary"
      >
        Tue
      </span>
    </div>
    <div
      aria-label="Avatars"
      class="astryx-avatar-group size-24 x3nfvp2 x6s0dn4"
      data-size="24"
      role="group"
      style="margin-left: auto;"
    >
      <div
        aria-label="Jane Doe"
        class="astryx-avatar size-24 x1n2onr6 x3nfvp2 x2lah0s xjspbzw xdh2fpr x1y0btm7 x1touxvs x10xzikg x1afcbsf x1sik18w xlz5hwt"
        data-size="24"
        role="img"
        style="--x---_avatar-group-overlap: -6px;"
      >
        <div
          class="x78zum5 x6s0dn4 xl56j7k xjspbzw xb3r6kr x87ps6o x5lhr3w x16ye13r"
          style="--x-width: 24px; --x-height: 24px;"
        >
          <div
            class="x78zum5 x6s0dn4 xl56j7k xh8yej3 x5yr21d xelv01g xicfil x9ynric xi08x9w xtvhhri xdmh292"
            style="--x-fontSize: var(--_avatar-fallback-font-size, 9.600000000000001px);"
          >
            JD
          </div>
        </div>
      </div>
      <div
        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
        id="_r_1_"
        popover="manual"
        role="tooltip"
      >
        <div
          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
        >
          Jane Doe
        </div>
      </div>
      <div
        aria-label="Mark Lee"
        class="astryx-avatar size-24 x1n2onr6 x3nfvp2 x2lah0s xjspbzw xdh2fpr x1y0btm7 x1touxvs x10xzikg x1afcbsf x1sik18w xlz5hwt"
        data-size="24"
        role="img"
        style="--x---_avatar-group-overlap: -6px;"
      >
        <div
          class="x78zum5 x6s0dn4 xl56j7k xjspbzw xb3r6kr x87ps6o x5lhr3w x16ye13r"
          style="--x-width: 24px; --x-height: 24px;"
        >
          <div
            class="x78zum5 x6s0dn4 xl56j7k xh8yej3 x5yr21d xelv01g xicfil x9ynric xi08x9w xtvhhri xdmh292"
            style="--x-fontSize: var(--_avatar-fallback-font-size, 9.600000000000001px);"
          >
            ML
          </div>
        </div>
      </div>
      <div
        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
        id="_r_2_"
        popover="manual"
        role="tooltip"
      >
        <div
          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
        >
          Mark Lee
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCard > renders checklist variant matching snapshot 1`] = `
<div
  style="background: var(--color-background-body); border: 1px solid; border-radius: 6px; padding: 10px 12px; box-shadow: var(--shadow-sm); display: flex; flex-direction: column; border-width: var(--color-border); border-style: var(--color-border); border-color: var(--color-border);"
>
  <div
    style="font-size: 13px; line-height: 1.35; font-weight: 500; margin-bottom: 8px;"
  >
    Cache layer for /tasks API
  </div>
  <div
    data-role="preview-body"
    style="display: flex; flex-direction: column;"
  >
    <div
      style="display: flex; flex-direction: column; gap: 4px; padding: 6px 8px; background: var(--color-background-card); border-radius: 4px; border: 1px solid; border-width: var(--color-border); border-style: var(--color-border); border-color: var(--color-border);"
    >
      <div
        style="display: flex; align-items: center; gap: 6px; font-size: 11.5px;"
      >
        <span
          aria-hidden="true"
          style="width: 11px; height: 11px; border-radius: 3px; background: var(--color-success); display: inline-block; flex-shrink: 0;"
        />
        <span
          style="color: var(--color-text-secondary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-decoration: line-through;"
        >
          Draft cache key schema
        </span>
      </div>
      <div
        style="display: flex; align-items: center; gap: 6px; font-size: 11.5px;"
      >
        <span
          aria-hidden="true"
          style="width: 11px; height: 11px; border-radius: 3px; background: var(--color-success); display: inline-block; flex-shrink: 0;"
        />
        <span
          style="color: var(--color-text-secondary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis; text-decoration: line-through;"
        >
          Architecture review
        </span>
      </div>
      <div
        style="display: flex; align-items: center; gap: 6px; font-size: 11.5px;"
      >
        <span
          aria-hidden="true"
          style="width: 11px; height: 11px; border-radius: 3px; border: 1px solid; display: inline-block; flex-shrink: 0; border-width: var(--color-border-emphasized); border-style: var(--color-border-emphasized); border-color: var(--color-border-emphasized);"
        />
        <span
          style="color: var(--color-text-primary); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
        >
          SSE invalidation test
        </span>
      </div>
      <div
        class="text-xs text-secondary"
        style="margin-top: 2px;"
      >
        2
         of 
        5
      </div>
    </div>
  </div>
  <div
    style="display: flex; align-items: center; justify-content: space-between; margin-top: 10px; padding-top: 8px; border-top-width: var(--color-border); border-top-style: var(--color-border); border-top-color: var(--color-border);"
  >
    <div
      style="display: flex; align-items: center; gap: 6px;"
    >
      <span
        aria-label="Urgent priority"
        class="astryx-statusdot neutral x1rg5ohu x16rqkct x2lah0s x1xc55vz xdk7pt x1q5y3ey"
        data-variant="neutral"
        role="img"
        style="background-color: var(--color-icon-red);"
      />
      <span
        class="astryx-badge neutral x3nfvp2 x6s0dn4 xl56j7k xzye2dw x1grt7ep xt970qd xf314gf xjspbzw xjb2p0i x141an7d x1ltkj2j x1e4wzip xuxw1ft x17x4s8c x1tgivj0"
        data-label-color="var(--color-accent)"
        data-variant="neutral"
      >
        api
      </span>
      <span
        class="text-xs text-secondary"
      >
        Tue
      </span>
    </div>
    <div
      aria-label="Avatars"
      class="astryx-avatar-group size-24 x3nfvp2 x6s0dn4"
      data-size="24"
      role="group"
      style="margin-left: auto;"
    >
      <div
        aria-label="Jane Doe"
        class="astryx-avatar size-24 x1n2onr6 x3nfvp2 x2lah0s xjspbzw xdh2fpr x1y0btm7 x1touxvs x10xzikg x1afcbsf x1sik18w xlz5hwt"
        data-size="24"
        role="img"
        style="--x---_avatar-group-overlap: -6px;"
      >
        <div
          class="x78zum5 x6s0dn4 xl56j7k xjspbzw xb3r6kr x87ps6o x5lhr3w x16ye13r"
          style="--x-width: 24px; --x-height: 24px;"
        >
          <div
            class="x78zum5 x6s0dn4 xl56j7k xh8yej3 x5yr21d xelv01g xicfil x9ynric xi08x9w xtvhhri xdmh292"
            style="--x-fontSize: var(--_avatar-fallback-font-size, 9.600000000000001px);"
          >
            JD
          </div>
        </div>
      </div>
      <div
        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
        id="_r_7_"
        popover="manual"
        role="tooltip"
      >
        <div
          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
        >
          Jane Doe
        </div>
      </div>
      <div
        aria-label="Mark Lee"
        class="astryx-avatar size-24 x1n2onr6 x3nfvp2 x2lah0s xjspbzw xdh2fpr x1y0btm7 x1touxvs x10xzikg x1afcbsf x1sik18w xlz5hwt"
        data-size="24"
        role="img"
        style="--x---_avatar-group-overlap: -6px;"
      >
        <div
          class="x78zum5 x6s0dn4 xl56j7k xjspbzw xb3r6kr x87ps6o x5lhr3w x16ye13r"
          style="--x-width: 24px; --x-height: 24px;"
        >
          <div
            class="x78zum5 x6s0dn4 xl56j7k xh8yej3 x5yr21d xelv01g xicfil x9ynric xi08x9w xtvhhri xdmh292"
            style="--x-fontSize: var(--_avatar-fallback-font-size, 9.600000000000001px);"
          >
            ML
          </div>
        </div>
      </div>
      <div
        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
        id="_r_8_"
        popover="manual"
        role="tooltip"
      >
        <div
          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
        >
          Mark Lee
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCard > renders description variant matching snapshot 1`] = `
<div
  style="background: var(--color-background-body); border: 1px solid; border-radius: 6px; padding: 10px 12px; box-shadow: var(--shadow-sm); display: flex; flex-direction: column; border-width: var(--color-border); border-style: var(--color-border); border-color: var(--color-border);"
>
  <div
    style="font-size: 13px; line-height: 1.35; font-weight: 500; margin-bottom: 8px;"
  >
    Cache layer for /tasks API
  </div>
  <div
    data-role="preview-body"
    style="display: flex; flex-direction: column;"
  >
    <div
      style="font-size: 12px; line-height: 1.5; color: var(--color-text-secondary); overflow: hidden;"
    >
      <span>
        Add a write-through cache to reduce p95.
      </span>
    </div>
  </div>
  <div
    style="display: flex; align-items: center; justify-content: space-between; margin-top: 10px; padding-top: 8px; border-top-width: var(--color-border); border-top-style: var(--color-border); border-top-color: var(--color-border);"
  >
    <div
      style="display: flex; align-items: center; gap: 6px;"
    >
      <span
        aria-label="Urgent priority"
        class="astryx-statusdot neutral x1rg5ohu x16rqkct x2lah0s x1xc55vz xdk7pt x1q5y3ey"
        data-variant="neutral"
        role="img"
        style="background-color: var(--color-icon-red);"
      />
      <span
        class="astryx-badge neutral x3nfvp2 x6s0dn4 xl56j7k xzye2dw x1grt7ep xt970qd xf314gf xjspbzw xjb2p0i x141an7d x1ltkj2j x1e4wzip xuxw1ft x17x4s8c x1tgivj0"
        data-label-color="var(--color-accent)"
        data-variant="neutral"
      >
        api
      </span>
      <span
        class="text-xs text-secondary"
      >
        Tue
      </span>
    </div>
    <div
      aria-label="Avatars"
      class="astryx-avatar-group size-24 x3nfvp2 x6s0dn4"
      data-size="24"
      role="group"
      style="margin-left: auto;"
    >
      <div
        aria-label="Jane Doe"
        class="astryx-avatar size-24 x1n2onr6 x3nfvp2 x2lah0s xjspbzw xdh2fpr x1y0btm7 x1touxvs x10xzikg x1afcbsf x1sik18w xlz5hwt"
        data-size="24"
        role="img"
        style="--x---_avatar-group-overlap: -6px;"
      >
        <div
          class="x78zum5 x6s0dn4 xl56j7k xjspbzw xb3r6kr x87ps6o x5lhr3w x16ye13r"
          style="--x-width: 24px; --x-height: 24px;"
        >
          <div
            class="x78zum5 x6s0dn4 xl56j7k xh8yej3 x5yr21d xelv01g xicfil x9ynric xi08x9w xtvhhri xdmh292"
            style="--x-fontSize: var(--_avatar-fallback-font-size, 9.600000000000001px);"
          >
            JD
          </div>
        </div>
      </div>
      <div
        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
        id="_r_a_"
        popover="manual"
        role="tooltip"
      >
        <div
          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
        >
          Jane Doe
        </div>
      </div>
      <div
        aria-label="Mark Lee"
        class="astryx-avatar size-24 x1n2onr6 x3nfvp2 x2lah0s xjspbzw xdh2fpr x1y0btm7 x1touxvs x10xzikg x1afcbsf x1sik18w xlz5hwt"
        data-size="24"
        role="img"
        style="--x---_avatar-group-overlap: -6px;"
      >
        <div
          class="x78zum5 x6s0dn4 xl56j7k xjspbzw xb3r6kr x87ps6o x5lhr3w x16ye13r"
          style="--x-width: 24px; --x-height: 24px;"
        >
          <div
            class="x78zum5 x6s0dn4 xl56j7k xh8yej3 x5yr21d xelv01g xicfil x9ynric xi08x9w xtvhhri xdmh292"
            style="--x-fontSize: var(--_avatar-fallback-font-size, 9.600000000000001px);"
          >
            ML
          </div>
        </div>
      </div>
      <div
        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
        id="_r_b_"
        popover="manual"
        role="tooltip"
      >
        <div
          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
        >
          Mark Lee
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCard > renders noPreview variant matching snapshot 1`] = `
<div
  style="background: var(--color-background-body); border: 1px solid; border-radius: 6px; padding: 10px 12px; box-shadow: var(--shadow-sm); display: flex; flex-direction: column; border-width: var(--color-border); border-style: var(--color-border); border-color: var(--color-border);"
>
  <div
    style="font-size: 13px; line-height: 1.35; font-weight: 500; margin-bottom: 8px;"
  >
    Cache layer for /tasks API
  </div>
  <div
    style="display: flex; align-items: center; justify-content: space-between; margin-top: 10px; padding-top: 8px; border-top-width: var(--color-border); border-top-style: var(--color-border); border-top-color: var(--color-border);"
  >
    <div
      style="display: flex; align-items: center; gap: 6px;"
    >
      <span
        aria-label="Urgent priority"
        class="astryx-statusdot neutral x1rg5ohu x16rqkct x2lah0s x1xc55vz xdk7pt x1q5y3ey"
        data-variant="neutral"
        role="img"
        style="background-color: var(--color-icon-red);"
      />
      <span
        class="astryx-badge neutral x3nfvp2 x6s0dn4 xl56j7k xzye2dw x1grt7ep xt970qd xf314gf xjspbzw xjb2p0i x141an7d x1ltkj2j x1e4wzip xuxw1ft x17x4s8c x1tgivj0"
        data-label-color="var(--color-accent)"
        data-variant="neutral"
      >
        api
      </span>
      <span
        class="text-xs text-secondary"
      >
        Tue
      </span>
    </div>
    <div
      aria-label="Avatars"
      class="astryx-avatar-group size-24 x3nfvp2 x6s0dn4"
      data-size="24"
      role="group"
      style="margin-left: auto;"
    >
      <div
        aria-label="Jane Doe"
        class="astryx-avatar size-24 x1n2onr6 x3nfvp2 x2lah0s xjspbzw xdh2fpr x1y0btm7 x1touxvs x10xzikg x1afcbsf x1sik18w xlz5hwt"
        data-size="24"
        role="img"
        style="--x---_avatar-group-overlap: -6px;"
      >
        <div
          class="x78zum5 x6s0dn4 xl56j7k xjspbzw xb3r6kr x87ps6o x5lhr3w x16ye13r"
          style="--x-width: 24px; --x-height: 24px;"
        >
          <div
            class="x78zum5 x6s0dn4 xl56j7k xh8yej3 x5yr21d xelv01g xicfil x9ynric xi08x9w xtvhhri xdmh292"
            style="--x-fontSize: var(--_avatar-fallback-font-size, 9.600000000000001px);"
          >
            JD
          </div>
        </div>
      </div>
      <div
        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
        id="_r_4_"
        popover="manual"
        role="tooltip"
      >
        <div
          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
        >
          Jane Doe
        </div>
      </div>
      <div
        aria-label="Mark Lee"
        class="astryx-avatar size-24 x1n2onr6 x3nfvp2 x2lah0s xjspbzw xdh2fpr x1y0btm7 x1touxvs x10xzikg x1afcbsf x1sik18w xlz5hwt"
        data-size="24"
        role="img"
        style="--x---_avatar-group-overlap: -6px;"
      >
        <div
          class="x78zum5 x6s0dn4 xl56j7k xjspbzw xb3r6kr x87ps6o x5lhr3w x16ye13r"
          style="--x-width: 24px; --x-height: 24px;"
        >
          <div
            class="x78zum5 x6s0dn4 xl56j7k xh8yej3 x5yr21d xelv01g xicfil x9ynric xi08x9w xtvhhri xdmh292"
            style="--x-fontSize: var(--_avatar-fallback-font-size, 9.600000000000001px);"
          >
            ML
          </div>
        </div>
      </div>
      <div
        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
        id="_r_5_"
        popover="manual"
        role="tooltip"
      >
        <div
          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
        >
          Mark Lee
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PreviewCard > renders reference variant matching snapshot 1`] = `
<div
  style="background: var(--color-background-body); border: 1px solid; border-radius: 6px; padding: 10px 12px; box-shadow: var(--shadow-sm); display: flex; flex-direction: column; border-width: var(--color-border); border-style: var(--color-border); border-color: var(--color-border);"
>
  <div
    style="font-size: 13px; line-height: 1.35; font-weight: 500; margin-bottom: 8px;"
  >
    Cache layer for /tasks API
  </div>
  <div
    data-role="preview-body"
    style="display: flex; flex-direction: column;"
  >
    <div
      style="display: flex; align-items: center; gap: 6px; padding: 6px 8px; background: var(--color-background-card); border-radius: 4px; border: 1px solid; font-size: 11.5px; border-width: var(--color-border); border-style: var(--color-border); border-color: var(--color-border);"
    >
      <span
        aria-hidden="true"
        style="width: 11px; height: 11px; border-radius: 3px; flex-shrink: 0; background: #2b579a;"
      />
      <span
        style="min-width: 0; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-weight: 500; flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"
      >
        Architecture review notes
      </span>
      <span
        class="font-mono tabular-nums text-xs text-secondary"
      >
        docs.acme
      </span>
    </div>
  </div>
  <div
    style="display: flex; align-items: center; justify-content: space-between; margin-top: 10px; padding-top: 8px; border-top-width: var(--color-border); border-top-style: var(--color-border); border-top-color: var(--color-border);"
  >
    <div
      style="display: flex; align-items: center; gap: 6px;"
    >
      <span
        aria-label="Urgent priority"
        class="astryx-statusdot neutral x1rg5ohu x16rqkct x2lah0s x1xc55vz xdk7pt x1q5y3ey"
        data-variant="neutral"
        role="img"
        style="background-color: var(--color-icon-red);"
      />
      <span
        class="astryx-badge neutral x3nfvp2 x6s0dn4 xl56j7k xzye2dw x1grt7ep xt970qd xf314gf xjspbzw xjb2p0i x141an7d x1ltkj2j x1e4wzip xuxw1ft x17x4s8c x1tgivj0"
        data-label-color="var(--color-accent)"
        data-variant="neutral"
      >
        api
      </span>
      <span
        class="text-xs text-secondary"
      >
        Tue
      </span>
    </div>
    <div
      aria-label="Avatars"
      class="astryx-avatar-group size-24 x3nfvp2 x6s0dn4"
      data-size="24"
      role="group"
      style="margin-left: auto;"
    >
      <div
        aria-label="Jane Doe"
        class="astryx-avatar size-24 x1n2onr6 x3nfvp2 x2lah0s xjspbzw xdh2fpr x1y0btm7 x1touxvs x10xzikg x1afcbsf x1sik18w xlz5hwt"
        data-size="24"
        role="img"
        style="--x---_avatar-group-overlap: -6px;"
      >
        <div
          class="x78zum5 x6s0dn4 xl56j7k xjspbzw xb3r6kr x87ps6o x5lhr3w x16ye13r"
          style="--x-width: 24px; --x-height: 24px;"
        >
          <div
            class="x78zum5 x6s0dn4 xl56j7k xh8yej3 x5yr21d xelv01g xicfil x9ynric xi08x9w xtvhhri xdmh292"
            style="--x-fontSize: var(--_avatar-fallback-font-size, 9.600000000000001px);"
          >
            JD
          </div>
        </div>
      </div>
      <div
        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
        id="_r_d_"
        popover="manual"
        role="tooltip"
      >
        <div
          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
        >
          Jane Doe
        </div>
      </div>
      <div
        aria-label="Mark Lee"
        class="astryx-avatar size-24 x1n2onr6 x3nfvp2 x2lah0s xjspbzw xdh2fpr x1y0btm7 x1touxvs x10xzikg x1afcbsf x1sik18w xlz5hwt"
        data-size="24"
        role="img"
        style="--x---_avatar-group-overlap: -6px;"
      >
        <div
          class="x78zum5 x6s0dn4 xl56j7k xjspbzw xb3r6kr x87ps6o x5lhr3w x16ye13r"
          style="--x-width: 24px; --x-height: 24px;"
        >
          <div
            class="x78zum5 x6s0dn4 xl56j7k xh8yej3 x5yr21d xelv01g xicfil x9ynric xi08x9w xtvhhri xdmh292"
            style="--x-fontSize: var(--_avatar-fallback-font-size, 9.600000000000001px);"
          >
            ML
          </div>
        </div>
      </div>
      <div
        class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
        id="_r_e_"
        popover="manual"
        role="tooltip"
      >
        <div
          class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
        >
          Mark Lee
        </div>
      </div>
    </div>
  </div>
</div>
`;
